# stack

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.agents/: architecture.md  contributing.md  development.md  docs.md  testing.md
.github/workflows/: build.yaml  draft-release.yaml
agents/: architecture.md  changelog.md  contributing.md  development.md
scripts/: install.sh
src/: app.rs  main.rs
src/args/: mod.rs
src/cli/: mod.rs
src/commands/: completions.rs  create.rs  delete.rs  doctor.rs  mod.rs  nav.rs  pr.rs  push.rs  shared.rs  stack.rs  sync.rs  track.rs  untrack.rs
src/core/: mod.rs  parents.rs  render.rs  sync.rs
src/db/: mod.rs
src/git/: mod.rs
src/provider/: mod.rs
src/tui/: mod.rs
src/ui/: interaction.rs  mod.rs  pickers.rs  tui.rs
src/util/: mod.rs  pr_body.rs  pr_links.rs  terminal.rs  url.rs
src/views/: mod.rs
tests/: cli_integration.rs
tests/cli/: completions.rs  create.rs  delete.rs  doctor.rs  pr.rs  push.rs  stack.rs  sync.rs  track.rs  untrack.rs
