[package]
name = "stack"
version = "0.8.3"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_lifetimes = "deny"
unused_import_braces = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
ctrlc = "3.4"
dialoguer = "0.11"
ratatui = "0.29"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.16"
assert_cmd = "2.0"
predicates = "3.1"
